--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                         <p><i class="fas fa-thumbtack"></i> Cultured and differentiated stem cells into dopaminergic progenitors to advance therapeutic research in neurodegenerative diseases.</p>
                         <p><i class="fas fa-thumbtack"></i> Performed precise gene expression analysis using PCR and qPCR techniques, ensuring high accuracy in quantifying genetic markers.</p>
                         <p><i class="fas fa-thumbtack"></i> Executed immunocytochemical analyses withtargeted antibodies, providing clear visualization of protein interactions critical to understanding cellular mechanisms.</p>
+                        <p><i class="fas fa-thumbtack"></i> Developed a Parkinson’s disease rat model and evaluated graft outcomes via stereotactic cell transplantation, fluorescence imaging, and behavioral assays.</p>                       
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Jul. 2024-Present</span></div>
                 </div>
@@ -252,7 +253,7 @@
                       <div class="flex-grow-1">
                           <h3 class="mb-0"><i class="fas fa-laptop-code"></i> Research Assistant at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
                           <p><i class="fas fa-thumbtack"></i>  Collaborated on a neurocognitive research project focused on understanding reward processing, dopaminergic responses, and error monitoring within the brain’s decision‑making mechanisms.</p>
-                          <p><i class="fas fa-thumbtack"></i>  EEG and FMRI experiment task designing with Psychtoolbox.</p>
+                          <!-- <p><i class="fas fa-thumbtack"></i>  EEG and FMRI experiment task designing with Psychtoolbox.</p> -->
                           <p><i class="fas fa-thumbtack"></i>  Acquired high‑density EEG signals (32 to 128 channels) across various setups, including simultaneous EEG‑fMRI, EEG‑TMS, EEG‑EMG, EEG‑VR, and EEG‑EOG sessions.</p>
                           <p><i class="fas fa-thumbtack"></i>  Familiar with various devices such as BrainProducts, g.HIAMP, g.USBAMP and g.NAUTILUS PRO.</p>
                           <p><i class="fas fa-thumbtack"></i>  Implemented and adjusted various Simulinks on MATLAB for collecting EEG data through g.tec devices.</p>
@@ -273,8 +274,8 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                    <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">University of Science and Culture</a></h3>
-                    <p><i class="fas fa-thumbtack"></i>  Genetic Engineering course (Chief T.A.) </p>
+                    <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at the <a href="http://usc.ac.ir/en">University of Science and Culture</a></h3>
+                    <p><i class="fas fa-thumbtack"></i>  Genetic Engineering course (T.A.) </p>
                     <p><i class="fas fa-thumbtack"></i>  Bioethics course (Chief T.A.)</p>
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Feb. 2025</span></div>
@@ -284,8 +285,8 @@
 
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
-                        <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at <a href="http://usc.ac.ir/en">the University of Science and Culture</a></h3>
-                        <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course (T.A.)</p>
+                        <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Teaching Assistant at the <a href="http://usc.ac.ir/en">University of Science and Culture</a></h3>
+                        <p><i class="fas fa-thumbtack"></i>  Cellular and Molecular Biology2 course (Chief T.A.)</p>
                         <p><i class="fas fa-thumbtack"></i>  Genetics course (T.A.)</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Jan. 2023</span></div>
@@ -309,7 +310,7 @@
   <div class="resume-content mr-auto">
       <h3 class="mb-0"><i class="fas fa-desktop"></i>  Computer Skills</h3>
   </br>
-      <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> RStudio, MATLAB, Psychophysics Toolbox (Psychtoolbox), EEGLAB, SPSS, GeneRunner, MEGA, L<sup>A</sup>T<sub>E</sub>X, Mendeley, Microsoft Office (PowerPoint, Excel, Word)</span></p>
+      <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> Python, MATLAB, EEGLAB, SPSS, ImageJ, GeneRunner, MEGA, L<sup>A</sup>T<sub>E</sub>X, Mendeley, Microsoft Office (PowerPoint, Excel, Word)</span></p>
   </div>
   </div>
 
@@ -329,7 +330,7 @@
       <div class="resume-content mr-auto">
           <h3 class="mb-0"><i class="fa-solid fa-flask"></i>  Laboratory Techniques</h3>
       </br>
-          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> Primer Design, PCR/qPCR, DNA/RNA Extraction, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
+          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> CRISPR, Stem cell culture and differentiation, Animal handling, Primer Design, PCR/qPCR, DNA/RNA Extraction, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
       </div>
   </div>
   
@@ -358,6 +359,37 @@
     
     <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Academic Projects</b></h2>
     <!-- <h2 class="mb-5">Academic Projects</h2> -->
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+        <h3 class="mb-0"><b>• <a href=>Establishing a Parkinson’s Disease Rat Model for Cell Therapy Evaluation</a>
+        </a></b></h3>
+        <div class="subheading mb-3">Department of Stem Cell Biology, University of Science and Culture.</div>
+        <p><i class="fas fa-arrow-circle-right"></i> Developed a Parkinson’s disease model in rats using 6-OHDA lesions and performed stereotactic transplantation of hESC-derived dopaminergic progenitors into the striatum.</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Conducted amphetamine-induced rotational behavior assays to evaluate functional motor recovery after cell transplantation.</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Executed post-mortem analysis, including brain slicing and fluorescence microscopy, to assess graft survival and cellular integration.</p>
+        <!-- </br> -->
+        <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
+      </div>
+      <!-- <div class="resume-date text-md-right"> -->
+      <!-- </div> -->
+    </div>
+
+    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+      <div class="resume-content mr-auto">
+        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/slideshow/hemispheric-lateralization-of-reward-and-punishment-processing-a-neuromatch-project/282139738">Are Reward and Punishment Processes Lateralized in the Brain?</a>
+        </a></b></h3>
+        <div class="subheading mb-3">Computational Neuroscience, Neuromatch.</div>
+        <p><i class="fas fa-arrow-circle-right"></i> Investigated hemispheric lateralization in outcome processing using preprocessed fMRI data from the Human Connectome Project’s Gambling task.</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Interpreted GLM, paired t-tests, and RDM outputs; observed right-hemisphere dominance in reward/punishment processing.</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Applied CNNs to BOLD time-series data, achieving 62.88% accuracy in win/loss classification.</p>
+        <!-- </br> -->
+        <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
+      </div>
+      <!-- <div class="resume-date text-md-right"> -->
+      <!-- </div> -->
+    </div>
+
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
@@ -394,8 +426,7 @@
         <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/srrnabased-cancer-vaccinespptx-b6b8">srRNA‑based Cancer Vaccines</a>
         </a></b></h3>
         <div class="subheading mb-3">Genetics in-course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Investigated self‑replicating RNA cancer vaccines, focusing on therapeutic vaccines targeting HPV.
-        </p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Investigated self‑replicating RNA cancer vaccines, focusing on therapeutic vaccines targeting HPV.</p>
         <p><i class="fas fa-arrow-circle-right"></i>  Explored various methods of cancer vaccine development, evaluating their potential in immunotherapy.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
@@ -550,6 +581,7 @@
             <h3 class="mb-0"><b>• Workshops
             </a></b></h3>
           </br>
+          <p><i class="fas fa-arrow-circle-right"></i>  <b>“Computational Neuroscience”</b> - <a href="https://neuromatch.io/">Neuromatch Academy</a>  <b>(<a href=>Certificate</a>)</b></p>
           <p><i class="fas fa-arrow-circle-right"></i>  <b>“Vaccine and Vaccination, from Design to Administration”</b> - <a href="https://english.rvsri.ac.ir/portal/home/?239735/Home">Razi Vaccine & Serum Research</a>  <b>(<a href="https://drive.google.com/file/d/1jvYpjhyb6tZTFbCA3NStjG0w79EVpWWZ/view?usp=drive_link">Certificate</a>)</b></p>
           <!-- <p><i class="fas fa-arrow-circle-right"></i>  <b>“Principles of Gene Editing and sgRNA Design Workshop”</b> - <a href="http://www.nigeb.ac.ir/web/en/home">NIGBE</a>  <b>(<a href="https://drive.google.com/file/d/1MTDKzTojaP8_pFDAoFAKYNV9bDF1Z5zE/view?usp=drive_link">Certificate</a>)</b></p> -->
           <p><i class="fas fa-arrow-circle-right"></i>  <b> “DNA Extraction, PCR, and DNA Paternity Test”</b> - <a href="https://atiehgene.ir/">Atieh Negar Gene Alborz</a>  <b>(<a href="https://drive.google.com/file/d/1jvYpjhyb6tZTFbCA3NStjG0w79EVpWWZ/view?usp=drive_link">Certificate</a>)</b></p>
