--- a/index.html
+++ b/index.html
@@ -544,10 +544,10 @@
                 <div class="resume-content mr-auto margin-right:-10px;">
                   <h3 class="mb-0">• Online</h3>
                 </br>
-                  <p><i class="fas fa-arrow-circle-right"></i> <b>“<a href="https://www.dataquest.io/">Data Analyst in R</a>”</b> - Offered by Dataquest</p>
-                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Fundamental Neuroscience for Neuroimaging</a>”</b> - Offered by <a href="https://www.nbml.ir/en/homepage/">National Brain Mapping Lab (NBML)</a></p>
+                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Data Analyst in R”</b> - Offered by <a href="https://www.dataquest.io/">Dataquest</a></p>
+                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Fundamental Neuroscience for Neuroimaging”</b> - Offered by <a href="https://www.nbml.ir/en/homepage/">National Brain Mapping Lab (NBML)</a></p>
                   <p><i class="fas fa-arrow-circle-right"></i> <b>“Basic, Clinical & Cognitive Neuroscience Diploma”</b> - Offered by <a href="https://www.neurotract.com/">Neurotract</a>  <b>(<a href="https://drive.google.com/file/d/1sJ7pRZaWcefrvGmF_bsrgwAqpiRS-iMS/view?usp=drive_link">Certificate</a>)</b></p>
-                  <p><i class="fas fa-arrow-circle-right"></i> <b>“<a href="https://www.edx.org/">Fundamentals of Neuroscience Parts 1 & 2</a>”</b> - Offered by edX</p>
+                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Fundamentals of Neuroscience Parts 1 & 2”</b> - Offered by <a href="https://www.edx.org/">edX</a></p>
                 <i class="fas fa-arrow-circle-right"></i> <b>“Elementary Steps toward AI”</b> - Offered by <a href="http://en.tums.ac.ir/en">Tehran University of Medical Science(TUMS)</a>
                 </div>
           </div>
