--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"><i class="fa fa-user"></i> About</a></li>
 
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education"><i class="fa fa-university"></i> Education</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"><i class="fas fa-map-marked-alt"></i> Publications</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"><i class="fas fa-map-marked-alt"></i> Publications</a></li>
 
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"><i class="fas fa-laptop-code"></i> Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills"><i class="fas fa-tools"></i> Skills</a></li>
