--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
 
 
             <!-- Interests-->
-            <!-- <section class="resume-section" id="interests">
+            <section class="resume-section" id="interests">
               <div class="resume-section-content">
-                <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Publications</b></h2> -->
-                <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Publications</b></h2>
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0"><b>• <a>Neural Correlates of Feedback Magnitude Variation during a Monetary Gambling Task: An fMRI Study (In  Preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Present</span></div>
                     <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div> -->
-                    <!-- </br> -->
-                    <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
-                  <!-- </div> -->
-                  <!-- <div class="resume-date text-md-right"> -->
-                  <!-- </div> -->
-                <!-- </div> -->
+                    </br>
+                    <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
+                  </div>
+                  <div class="resume-date text-md-right">
+                  </div>
+                </div>
 
 
                 <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -230,8 +230,8 @@
                   <!-- </div> -->
                 <!-- </div>
               </div>
-          </section> -->
-
+         </section>
+         <hr class="m-0" />
 
 
 
