--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <h3 class="mb-0"><b>• <a>Neural Correlates of Feedback Magnitude Variation during a Monetary Gambling Task: An fMRI Study (In  Preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Present</span></div>
-                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div> -->
+                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
                     </br>
                     <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
                   </div>
@@ -201,37 +201,37 @@
                 </div>
 
 
-                <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0"><b>• <a>Unraveling the Neuroscience of Choice: The Impact of Winning or Losing Monetary Rewards of Varying Magnitudes
                       on Brain Activity during Decision‑Making; Insights from a Simultaneous EEG‑fMRI Experiment. (Submitted to Fron‑
                       tiers in Human Neuroscience)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024</span></div>
-                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div> -->
-                    <!-- </br> -->
-                    <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
-                  <!-- </div> -->
-                  <!-- <div class="resume-date text-md-right"> -->
-                  <!-- </div> -->
-                <!-- </div> -->
+                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
+                    </br>
+                    <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
+                  </div>
+                  <div class="resume-date text-md-right">
+                  </div>
+                 </div> 
 
 
-                <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0"><b>• <a>Prevalence of AZF Microdeletions in Men with Oligo- or Azoospermia: A Retrospective Study (In  Preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2024 - Present</span></div>
-                    <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://www.researchgate.net/profile/Hesamoddin-Sajadi">Dr. Hesamoddin Sajadi</a>, <a href="https://scholar.google.com/citations?user=7vX9bV4AAAAJ&hl=en">Dr. Reza Omani-Samani</a></div> -->
-                    <!-- </br> -->
-                    <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
-                  <!-- </div> -->
-                  <!-- <div class="resume-date text-md-right"> -->
-                  <!-- </div> -->
-                <!-- </div>
+                    <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://www.researchgate.net/profile/Hesamoddin-Sajadi">Dr. Hesamoddin Sajadi</a>, <a href="https://scholar.google.com/citations?user=7vX9bV4AAAAJ&hl=en">Dr. Reza Omani-Samani</a></div>
+                    </br>
+                    <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
+                  </div>
+                  <div class="resume-date text-md-right">
+                  </div>
+                </div>
               </div>
-             </section>
-             <hr class="m-0" />
+            </section>
+            <hr class="m-0" />
 
 
 
@@ -241,7 +241,7 @@
 
           
 
-            <!-- Experience-->
+         <!-- Experience-->
            <section class="resume-section" id="experience" style="background-color:#F2F3F4">
               <div class="resume-section-content">
                   <h2><img src="assets/img/Experience_logo.jpeg" alt="Experience" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Experience</b></h2>
