--- a/index.html
+++ b/index.html
@@ -185,36 +185,38 @@
 
            <!-- Interests-->
             <section class="resume-section" id="interests">
+
+
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                  <div class="resume-content mr-auto">
+                    <h3 class="mb-0"><b>• <a>Dopaminergic Progenitors through a Small Molecule Approach: Evaluating the Gene Expression Levels” (In Preparation)</a>
+                    </a></b></h3>
+                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2025</span></div>
+                    <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://scholar.google.com/citations?user=WlJWp8EAAAAJ">Nasim Eslami</a>, <a href="https://scholar.google.com/citations?user=DBrb-L0AAAAJ">Zahra Shiri</a>, <a href="https://scholar.google.com/citations?user=c0RWRSYAAAAJ&hl=en">Hossein Baharvand </a></div>
+                    </br>
+                    <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
+                  </div>
+                  <div class="resume-date text-md-right">
+                  </div>
+                 </div> 
+
+
               <div class="resume-section-content">
                 <h2><img src="assets/img/project-icon.jpg" alt="projects" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Publications</b></h2>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0"><b>• <a>Neural Correlates of Feedback Magnitude Variation during a Monetary Gambling Task: An fMRI Study (In  Preparation)</a>
+                    <h3 class="mb-0"><b>• <a>Neural Correlates of Feedback Magnitude Variation during a Monetary Gambling Task: An fMRI Study (In Preparation)</a>
                     </a></b></h3>
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024 - Present</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2025</span></div>
                     <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
                     </br>
-                    <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
+                    <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
                   </div>
                   <div class="resume-date text-md-right">
                   </div>
                 </div>
 
-
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                  <div class="resume-content mr-auto">
-                    <h3 class="mb-0"><b>• <a>Unraveling the Neuroscience of Choice: The Impact of Winning or Losing Monetary Rewards of Varying Magnitudes
-                      on Brain Activity during Decision‑Making; Insights from a Simultaneous EEG‑fMRI Experiment. (Submitted to Fron‑
-                      tiers in Human Neuroscience)</a>
-                    </a></b></h3>
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2024</span></div>
-                    <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
-                    </br>
-                    <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                  </div>
-                  <div class="resume-date text-md-right">
-                  </div>
-                 </div> 
 
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -224,7 +226,7 @@
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2024 - Present</span></div>
                     <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://www.researchgate.net/profile/Hesamoddin-Sajadi">Dr. Hesamoddin Sajadi</a>, <a href="https://scholar.google.com/citations?user=7vX9bV4AAAAJ&hl=en">Dr. Reza Omani-Samani</a></div>
                     </br>
-                    <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
+                    <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
                   </div>
                   <div class="resume-date text-md-right">
                   </div>
