--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </h1>
 
                     <div class="subheading mb-5">
-                        Department of Genetics</a>, <a href="http://usc.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
+                        Department of Stem Cell Biology</a>, <a href="http://usc.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
                     <a href="mailto:shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
