--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
                           <h3 class="mb-0"><i class="fa fa-university"></i> University of Science and Culture</h3>
-                          <div class="subheading mb-3"> Department of Genetics</a></br>Master of Science</div>
+                          <div class="subheading mb-3"> Department of Stem Cell Biology</a></br>Master of Science</div>
                           <!-- <div class="subheading mb-3">Master of Science</div> -->
                           <div><i class="fas fa-graduation-cap"></i> <b>Genetics<b></div>
                         <p><i class="far fa-list-alt"></i> Current GPA: <b>18.62/20 (3.90/4)</b>
