--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0"><b>• <a>Dopaminergic Progenitors through a Small Molecule Approach: Evaluating the Gene Expression Levels” (In Preparation)</a>
+                    <h3 class="mb-0"><b>• <a>Dopaminergic Progenitors through a Small Molecule Approach: Evaluating the Gene Expression Levels” (Manuscript in preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2025</span></div>
                     <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://scholar.google.com/citations?user=WlJWp8EAAAAJ">Nasim Eslami</a>, <a href="https://scholar.google.com/citations?user=DBrb-L0AAAAJ">Zahra Shiri</a>, <a href="https://scholar.google.com/citations?user=c0RWRSYAAAAJ&hl=en">Hossein Baharvand </a></div>
@@ -210,7 +210,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0"><b>• <a>Prevalence of AZF Microdeletions in Men with Oligo- or Azoospermia: A Retrospective Study (In  Preparation)</a>
+                    <h3 class="mb-0"><b>• <a>Prevalence of AZF Microdeletions in Men with Oligo- or Azoospermia: A Retrospective Study (Manuscript in  preparation)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2025</span></div>
                     <div class="subheading mb-3">Sh. Mahmoudi, <a href="https://www.researchgate.net/profile/Hesamoddin-Sajadi">Dr. Hesamoddin Sajadi</a>, <a href="https://scholar.google.com/citations?user=7vX9bV4AAAAJ&hl=en">Dr. Reza Omani-Samani</a></div>
@@ -226,7 +226,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0"><b>• <a>Neural Encoding of Outcome Magnitude:Evidence from fMRI (Submitted to ICBME)</a>
+                    <h3 class="mb-0"><b>• <a>Neural Encoding of Outcome Magnitude:Evidence from fMRI (Manuscript submitted to ICBME)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2025</span></div>
                     <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
@@ -260,7 +260,7 @@
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Research Assistant at the <a href="http://usc.ac.ir/en">University of Science and Culture</a></h3>
                         <p><i class="fas fa-thumbtack"></i> Cultured and differentiated stem cells into dopaminergic progenitors to advance therapeutic research in neurodegenerative diseases.</p>
                         <p><i class="fas fa-thumbtack"></i> Performed precise gene expression analysis using PCR and qPCR techniques, ensuring high accuracy in quantifying genetic markers.</p>
-                        <p><i class="fas fa-thumbtack"></i> Executed immunocytochemical analyses withtargeted antibodies, providing clear visualization of protein interactions critical to understanding cellular mechanisms.</p>
+                        <p><i class="fas fa-thumbtack"></i> Conducted immunocytochemical analyses withtargeted antibodies, providing clear visualization of protein interactions critical to understanding cellular mechanisms.</p>
                         <p><i class="fas fa-thumbtack"></i> Developed a Parkinson’s disease rat model and evaluated graft outcomes via stereotactic cell transplantation, fluorescence imaging, and behavioral assays.</p>                       
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Jul. 2024-Present</span></div>
@@ -272,9 +272,9 @@
                           <h3 class="mb-0"><i class="fas fa-laptop-code"></i> Research Assistant at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
                           <p><i class="fas fa-thumbtack"></i>  Collaborated on a neurocognitive research project focused on understanding reward processing, dopaminergic responses, and error monitoring within the brain’s decision‑making mechanisms.</p>
                           <!-- <p><i class="fas fa-thumbtack"></i>  EEG and FMRI experiment task designing with Psychtoolbox.</p> -->
-                          <p><i class="fas fa-thumbtack"></i>  Acquired high‑density EEG signals (32 to 128 channels) across various setups, including simultaneous EEG‑fMRI, EEG‑TMS, EEG‑EMG, EEG‑VR, and EEG‑EOG sessions.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Collected high‑density EEG signals (32 to 128 channels) in multimodal setups: simultaneous EEG‑fMRI, EEG‑TMS, EEG‑EMG, EEG‑VR, and EEG‑EOG sessions.</p>
                           <p><i class="fas fa-thumbtack"></i>  Familiar with various devices such as BrainProducts, g.HIAMP, g.USBAMP and g.NAUTILUS PRO.</p>
-                          <p><i class="fas fa-thumbtack"></i>  Implemented and adjusted various Simulinks on MATLAB for collecting EEG data through g.tec devices.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Used Simulink in MATLAB to collect EEG data through g.tec devices.</p>
 
                       </div>
                       <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep 2022. - Sep. 2023</span></div>
@@ -348,7 +348,7 @@
       <div class="resume-content mr-auto">
           <h3 class="mb-0"><i class="fa-solid fa-flask"></i>  Laboratory Techniques</h3>
       </br>
-          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> CRISPR, Stem cell culture and differentiation, Animal handling, Primer Design, PCR/qPCR, DNA/RNA Extraction, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
+          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> Stem cell culture and differentiation, Animal handling, Primer Design, PCR/qPCR, DNA/RNA Extraction, Immunofluorescence, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
       </div>
   </div>
   
@@ -674,7 +674,7 @@
                           <div class="resume-item d-flex flex-column flex-md-row mb-1">
                               <div class="resume-content mr-auto text-align:justify; text-justify: inter-word; ">
                                   <span class="fa-li lead mb-0"><i class="fas fa-trophy text-warning"></i></span>
-                          <p class="lead mb-0">Contributor writer in 4<sup>th</sup>, 5<sup>th</sup> & 6<sup>th</sup> issues <b>“Biocan magazine at Union of Biology Students of Iran”</b>.  <b>(<a href="https://drive.google.com/drive/folders/1LAg0xHYKP6O4m1Bptc4agt8KztDfXH1K?usp=drive_link">Magazine</a>)</b></p>
+                          <p class="lead mb-0">Contributing writer in 4<sup>th</sup>, 5<sup>th</sup> & 6<sup>th</sup> issues <b>“Biocan magazine at Union of Biology Students of Iran”</b>.  <b>(<a href="https://drive.google.com/drive/folders/1LAg0xHYKP6O4m1Bptc4agt8KztDfXH1K?usp=drive_link">Magazine</a>)</b></p>
                               </div>
                               <div class="resume-date text-md-right">
                                 <span class="text-primary"><i class="far fa-calendar-alt"></i> Jan. 2020 - May 2023</span>
@@ -686,7 +686,7 @@
                         <div class="resume-item d-flex flex-column flex-md-row mb-1">
                             <div class="resume-content mr-auto text-align:justify; text-justify: inter-word; ">
                                 <span class="fa-li lead mb-0"><i class="fas fa-trophy text-warning"></i></span>
-                        <p class="lead mb-0">Contributor writer in 2<sup>nd</sup> & 3<sup>rd</sup> issues <b>“Genomics magazine at University of Science & Culture”</b>.  <b>“Biocan magazine at Union of Biology Students of Iran”</b>.  <b>(<a href="https://drive.google.com/drive/folders/1N6xpk-E7x3RJPfPoeIYJIktJNPlWwhbX?usp=drive_link">Magazine</a>)</b></p>
+                        <p class="lead mb-0">Contributing writer in 2<sup>nd</sup> & 3<sup>rd</sup> issues <b>“Genomics magazine at University of Science & Culture”</b>.  <b>“Biocan magazine at Union of Biology Students of Iran”</b>.  <b>(<a href="https://drive.google.com/drive/folders/1N6xpk-E7x3RJPfPoeIYJIktJNPlWwhbX?usp=drive_link">Magazine</a>)</b></p>
                             </div>
                             <div class="resume-date text-md-right">
                               <span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. 2019 - Jun. 2021</span>
