--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                           <div class="subheading mb-3"> Department of Stem Cell Biology</a></br>Master of Science</div>
                           <!-- <div class="subheading mb-3">Master of Science</div> -->
                           <div><i class="fas fa-graduation-cap"></i> <b>Genetics<b></div>
-                        <p><i class="far fa-list-alt"></i> Current GPA: <b>18.62/20 (3.90/4)</b>
+                        <p><i class="far fa-list-alt"></i> GPA: <b>18.62/20 (3.90/4)</b>
                         <p><i class="far fa-list-alt"></i>  <b>Thesis:</b> "Maturation of hESC-Derived Dopaminergic Progenitors by a Small Molecule Approach"
                         <!-- <p><i class="far fa-list-alt"></i>  Supervisor: <a href="https://scholar.google.com/citations?user=c0RWRSYAAAAJ&hl=en"><b>Prof. Hossein Baharvand</a><b> -->
 
@@ -160,7 +160,7 @@
                             <div class="subheading mb-3"> Department of Cell and Molecular Biology</a></br>Bachelor of Science</div>
                             <!-- <div class="subheading mb-3">Master of Science</div> -->
                             <div><i class="fas fa-graduation-cap"></i> Cellular and Molecular Biology</div>
-			                    <p><i class="far fa-list-alt"></i> Current GPA: <b>19.40/20 (4/4)</b>
+			                    <p><i class="far fa-list-alt"></i> GPA: <b>19.40/20 (4/4)</b>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2019 - Feb. 2023</span></div>
                     </div>
