--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0"><b>• <a>Neural Encoding of Outcome Magnitude:Evidence from fMRI (Manuscript submitted to ICBME)</a>
+                    <h3 class="mb-0"><b>• <a>Neural Encoding of Outcome Magnitude:Evidence from fMRI (Paper accepted to ICBM)</a>
                     </a></b></h3>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2025</span></div>
                     <div class="subheading mb-3"><a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">A. M. Mohammadi</a>, Sh. Mahmoudi, <a href="https://scholar.google.com/citations?hl=en&user=avcqX6sAAAAJ">E. Ebrahimzadeh</a>, <a href="https://scholar.google.com/citations?user=Lc1LZWIAAAAJ">H. Soltanian-Zadeh</a></div>
