--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         <p><i class="fas fa-thumbtack"></i> Cultured and differentiated stem cells into dopaminergic progenitors to advance therapeutic research in neurodegenerative diseases.</p>
                         <p><i class="fas fa-thumbtack"></i> Performed precise gene expression analysis using PCR and qPCR techniques, ensuring high accuracy in quantifying genetic markers.</p>
                         <p><i class="fas fa-thumbtack"></i> Conducted immunocytochemical analyses withtargeted antibodies, providing clear visualization of protein interactions critical to understanding cellular mechanisms.</p>
-                        <p><i class="fas fa-thumbtack"></i> Developed a Parkinson’s disease rat model and evaluated graft outcomes via stereotactic cell transplantation, fluorescence imaging, and behavioral assays.</p>                       
+                        <p><i class="fas fa-thumbtack"></i> Developed a Parkinson’s disease rat model and evaluated graft outcomes via stereotactic cell transplantation, immunohistochemistry, and behavioral assays.</p>                       
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Jul. 2024-Present</span></div>
                 </div>
